--- a/src/main/resources/templates/wish-list.html
+++ b/src/main/resources/templates/wish-list.html
@@ -58,10 +58,10 @@
                             <div class="cart_bar">
                                 <ul class="cart_bar_list item_list d-flex flex-row align-items-center justify-content-end">
                                     <li class="mr-auto">Product</li>
-                                    <li>Price</li>
-                                    <li>Stock</li>
-                                    <li></li>
-                                    <li></li>
+                                    <li class="cart_item_li">Price</li>
+                                    <li class="cart_item_li">Stock</li>
+                                    <li class="cart_item_li"></li>
+                                    <li class="cart_item_li"></li>
                                 </ul>
                             </div>
 
@@ -74,73 +74,84 @@
                                             <div class="product_box d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start mr-auto">
                                                 <a th:href="@{'/product/' + ${product.getProductId()}}">
                                                     <div>
-                                                        <div class="product_image">
-                                                            <img th:src="|data:image/png;base64,${product.getEncodedCoverImage()}|"
-                                                                 alt="" class="product_image_img"/>
+                                                        <div class="product_image vertical_center"
+                                                             style="margin-left: 20px; margin-right: 10px">
+                                                            <img class="review_product_image" alt="Product Cover Image"
+                                                                 th:src="|data:image/png;base64,${product.getEncodedCoverImage()}|"/>
                                                         </div>
                                                     </div>
 
                                                     <div class="product_name_container">
-                                                        <div class="product_name">
+                                                        <div class="wish-list-product-name">
                                                             <a th:href="@{'/product/' + ${product.getProductId()}}"
                                                                th:text="${product.getProductName()}">
                                                             </a>
                                                         </div>
+
                                                         <!-- Author -->
                                                         <span th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
-                                                            <div class="product_text">
+                                                            <div class="wish-list-product-text">
                                                                 <span th:each="authors, iterStat : ${product.getAuthors()}"
                                                                       th:text="${!iterStat.last} ? ${authors} + ', ': ${authors}"
                                                                       style="display:inline">
                                                                 </span>
                                                             </div>
                                                         </span>
+
                                                         <!-- Case Brand -->
                                                         <span th:if="${product.getProductTypeName() == 'E-Book Reader Case' || product.getProductTypeName() == 'Book Case'}">
-                                                            <div class="product_text">
-                                                                <td th:text="${product.getCaseBrand()}"></td>
-                                                            </div>
+                                                            <div class="wish-list-product-text"
+                                                                 th:text="${product.getCaseBrand()}"></div>
                                                         </span>
+
                                                         <!-- Tablet Brand -->
                                                         <span th:if="${product.getProductTypeName() == 'E-Book Reader'}">
-                                                            <div class="product_text">
-                                                                <td th:text="${product.getReaderBrand()}"></td>
-                                                            </div>
+                                                            <div class="wish-list-product-text"
+                                                                 th:text="${product.getReaderBrand()}"></div>
                                                         </span>
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="product_total product_text">
+
+                                            <div class="product_price product_text cart_item_li">
                                                 <div th:if="${product.isOnDiscount()}">
                                                     <div class="align-items-start justify-content-start">
-                                                    <!-- when no sale delete -->
-                                                        <div class="sale_price"><b><td
-                                                                th:text="${product.getDiscountRate() + '% ' + 'off'}"></td></b></div>
+                                                        <!-- when no sale delete -->
                                                         <div class="sale_price">
-                                                            <del><td th:text="${product.getPrice() + '₺'}"></td></del>
+                                                            <b th:text="${'%' + #numbers.formatDecimal(product.getDiscountRate() * 100, 0, 0) + ' off'}"></b>
+                                                        </div>
+                                                        <div class="sale_price">
+                                                            <del th:text="${'₺' + product.getPrice()}"></del>
                                                         </div>
                                                     </div>
                                                 </div>
+
                                                 <span>Price:</span>
-                                                <span style="display:block"
-                                                      th:text="${'₺' + #numbers.formatDecimal(product.getPrice() - product.getPrice() * product.getDiscountRate(),0,2)}"></span>
+                                                <span style="display:inline" th:text="${'₺' + #numbers.formatDecimal(
+                                                    product.getPrice() - (product.getPrice() * product.getDiscountRate()),
+                                                    0, 2)}">
+                                                </span>
                                             </div>
-                                            <div th:if="${product.getStock() <= 0}">
+
+                                            <div th:if="${product.getStock() <= 0}" class="cart_item_li">
                                                 <div><i style="font-size:30px"
                                                         class="fa fa-close product_text product_stock"></i></div>
                                             </div>
-                                            <div th:unless="${product.getStock() <= 0}">
+
+                                            <div th:unless="${product.getStock() <= 0}" class="cart_item_li">
                                                 <div><i style="font-size:30px"
                                                         class="fa fa-check product_text product_stock"></i></div>
                                             </div>
-                                            <div class="product_total product_text"><a th:href="@{/cart}"
-                                                                                       title="Add to cart">
+
+                                            <div class="product_total product_text cart_item_li"><a th:href="@{/cart}"
+                                                                                                    title="Add to cart">
                                                 <button th:id="${product.getProductId()}" name="add_to_shopping_cart"
                                                         class="wish_to_shopping" style="font-size:30px"><i
                                                         class="fa fa-shopping-cart product_text"></i></button>
                                             </a></div>
-                                            <div class="product_total product_text"><a href=""
-                                                                                       title="Remove from wish list">
+
+                                            <div class="product_total product_text cart_item_li"><a href=""
+                                                                                                    title="Remove from wish list">
                                                 <button th:id="${product.getProductId()}" name="delete_product"
                                                         style="font-size:30px"
                                                         class="fa product_text wish_product_delete">&#xf014;</button>
