--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -77,25 +77,25 @@
 
                                                     <div class="row order - row collapsible">
                                                         <div class="col-lg-3 col-md-3 col-xs-3">
-                                                            <div class="profile-order-text">
+                                                            <div class="profile-order-text vertical_center">
                                                                 <td th:text="${order.getOrderCode()}"></td>
                                                             </div>
                                                         </div>
 
                                                         <div class="col-lg-3 col-md-3 col-xs-3">
-                                                            <div class="profile-order-text">
+                                                            <div class="profile-order-text vertical_center">
                                                                 <td th:text="${order.getTotalNumberOfProducts()}"></td>
                                                             </div>
                                                         </div>
 
                                                         <div class="col-lg-3 col-md-3 col-xs-3">
-                                                            <div class="profile-order-text">
+                                                            <div class="profile-order-text vertical_center">
                                                                 <td th:text="${order.getShippingCompany()}"></td>
                                                             </div>
                                                         </div>
 
                                                         <div class="col-lg-3 col-md-3 col-xs-3">
-                                                            <div class="profile-order-text">
+                                                            <div class="profile-order-text vertical_center">
                                                                 <td th:text="'₺' + ${#numbers.formatDecimal(order.getTotalAmount(), 0, 'COMMA', 2, 'POINT')}"></td>
                                                             </div>
                                                         </div>
