admin panel product button bug fix

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -186,7 +186,7 @@
                                 </div>
                                 <textarea type="text" id="book_short_description_input"
                                           class="long_desc_textarea form-control different-control w-100" rows="4"
-                                          placeholder="Long Description" required="required"></textarea>
+                                          placeholder="Short Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -295,7 +295,7 @@
                                 <div id="book_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
-                                <input type="button" value="Add product" class="login_button trans_200" id="new_book">
+                                <input type="submit" value="Add product" class="login_button trans_200" id="new_book">
                             </div>
                         </div>
                     </form>
@@ -438,7 +438,7 @@
                                 </div>
                                 <textarea type="text" id="ebook_short_description_input"
                                           class="long_desc_textarea form-control different-control w-100" rows="4"
-                                          placeholder="Long Description" required="required"></textarea>
+                                          placeholder="Short Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -509,7 +509,7 @@
                                 <div id="ebook_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
-                                <input type="button" value="Add product" class="login_button trans_200" id="new_ebook">
+                                <input type="submit" value="Add product" class="login_button trans_200" id="new_ebook">
                             </div>
                         </div>
                     </form>
@@ -652,7 +652,7 @@
                                 </div>
                                 <textarea type="text" id="audiobook_short_description_input"
                                           class="long_desc_textarea form-control different-control w-100" rows="4"
-                                          placeholder="Long Description" required="required"></textarea>
+                                          placeholder="Short Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -714,7 +714,7 @@
                             </div>
 
                             <div class="col-md-4">
-                                <input type="button" value="Add product" class="login_button trans_200"
+                                <input type="submit" value="Add product" class="login_button trans_200"
                                        id="new_audio_book">
                             </div>
                         </div>
@@ -785,7 +785,7 @@
                                 </div>
                                 <textarea type="text" id="ebook_reader_short_description_input"
                                           class="long_desc_textarea form-control different-control w-100" rows="4"
-                                          placeholder="Long Description" required="required"></textarea>
+                                          placeholder="Short Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1023,7 +1023,7 @@
                                 <div id="ebook_reader_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
-                                <input type="button" value="Add product" class="login_button trans_200"
+                                <input type="submit" value="Add product" class="login_button trans_200"
                                        id="new_ebook_reader">
                             </div>
                         </div>
@@ -1120,7 +1120,7 @@
                                 </div>
                                 <textarea type="text" id="ebook_reader_case_short_description_input"
                                           class="long_desc_textarea form-control different-control w-100" rows="4"
-                                          placeholder="Long Description" required="required"></textarea>
+                                          placeholder="Short Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1187,7 +1187,7 @@
                                 <div id="ebook_reader_case_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
-                                <input type="button" value="Add product" class="login_button trans_200"
+                                <input type="submit" value="Add product" class="login_button trans_200"
                                        id="new_ebook_reader_case">
                             </div>
                         </div>
@@ -1296,7 +1296,7 @@
                                 </div>
                                 <textarea type="text" id="book_case_short_description_input"
                                           class="long_desc_textarea form-control different-control w-100" rows="4"
-                                          placeholder="Long Description" required="required"></textarea>
+                                          placeholder="Short Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1336,7 +1336,7 @@
                                 <div id="book_case_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
-                                <input type="button" value="Add product" class="login_button trans_200"
+                                <input type="submit" value="Add product" class="login_button trans_200"
                                        id="new_book_case">
                             </div>
                         </div>
