Forgot password input size updated.

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -47,7 +47,7 @@
                                         <!-- Email -->
                                         <div class="login-text p-b-10" style="color: black;">E-Mail Address</div>
                                         <input type="email" id="forgot_password_email" class="login_input form-control"
-                                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required="required">
+                                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required="required" maxlength="255">
                                     </div>
                                     <div><!--ERROR--></div>
                                     <input id="login_button" type="submit" value="SEND LINK" class="login_button trans_200" >
