New password added.

--- a/src/main/resources/templates/new-password.html
+++ b/src/main/resources/templates/new-password.html
@@ -47,7 +47,8 @@
                                         <div class="login-text p-b-10" style="color: black;">Password</div>
                                         <div class="input-group">
                                             <input type="password" id="new_password"
-                                                   class="login_input form-control pwd" pattern = "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,16}$" required="required">
+                                                   class="login_input form-control pwd" pattern = "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,16}$"
+                                                   required="required" maxlength="255">
                                             <div class="input-group-append">
                                                 <span class="input-group-text show_password_bg">
                                                     <button class="btn btn-default reveal" type="button"><i
@@ -61,7 +62,8 @@
                                         <div class="login-text p-b-10" style="color: black;">Confirm Password</div>
                                         <div class="input-group">
                                             <input  type="password" id="new_password_again"
-                                                   class="login_input form-control pwd1" pattern = "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,16}$" required="required">
+                                                   class="login_input form-control pwd1" pattern = "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,16}$"
+                                                    required="required" maxlength="255">
                                             <div class="input-group-append">
                                                 <span class="input-group-text show_password_bg">
                                                     <button class="btn btn-default reveal1" type="button"><i
