profile order tab call fixes

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -65,7 +65,9 @@
                                                                 sort=(${#request.getParameter('sort')} ?: 'time-desc'),
                                                                 payOptFilter=(${#request.getParameter('payOptFilter')} ?: 'all'),
                                                                 payStatFilter=(${#request.getParameter('payStatFilter')} ?: 'all'),
-                                                                delStatFilter=(${#request.getParameter('delStatFilter')} ?: 'all'))}"
+                                                                orderStatFilter=(${#request.getParameter('orderStatFilter')} ?: 'all'),
+                                                                delStatFilter=(${#request.getParameter('delStatFilter')} ?: 'all'),
+                                                                couponFilter=(${#request.getParameter('couponFilter')} ?: 'all'))}"
                            th:href="@{#order}">My Orders</a>
                     </li>
 
