--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -114,7 +114,7 @@
                     <li class="nav-item">
                         <a class="nav-link profile-navbar-text"
                            th:attr="data-url=@{/user-details/search(size=(${#request.getParameter('size')} ?: '2'),id= ${user.getUserId()}, page=(${#request.getParameter('page')} ?: '1'),
-                                                                    sort=(${#request.getParameter('sort')} ?: 'Search-Value-desc'))}"
+                                                                    sort=(${#request.getParameter('sort')} ?: 'Search-Value-asc'))}"
                            th:href="@{#search}">Search
                             History</a>
                     </li>
